<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_setting_black"
        android:title="@string/action_settings"
        app:showAsAction="always">
        <menu>

            <item
                android:id="@+id/action_wishlist"
                android:title="@string/recentlyviewed"
                android:icon="@drawable/ic_wishlist"
                />

            <item
                android:id="@+id/action_recentlyviewed"
                android:title="@string/recentlyviewed"
                android:icon="@drawable/ic_similarproduct"
                />

            <item
                android:id="@+id/action_myProfile"
                android:title="@string/myProfile"
                android:icon="@drawable/ic_myprofile"
                />

        </menu>
    </item>

</menu>