<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/mLinearLoginSignupRoot"
              xmlns:android="http://schemas.android.com/apk/res/android"
              style="@style/layout_normal"
              android:layout_height="wrap_content"
              android:focusable="true"
              android:focusableInTouchMode="true"
              android:orientation="vertical"
              android:gravity="bottom"
              android:background="@android:color/white"
    >


    <com.clipwiser.views.TextViewRegular
        android:id="@+id/mTextViewUsing"
        style="@style/textStyle_normal"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:text="@string/login_using"
        android:textColor="@color/color_8a000000"
        android:textSize="@dimen/dimen_14sp"/>


    <LinearLayout
        android:id="@+id/mLinearLayoutSocialButton"
        style="@style/layout_normal"
        android:layout_height="@dimen/dimen_46dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:weightSum="2.5"
        android:background="@color/white"
        >

        <com.clipwiser.views.SpCompatButton
            android:id="@+id/buttonFacebook"
            style="@style/FabStyle"
            android:layout_width="@dimen/dimen_144dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/facebook"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            />

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"/>

        <com.clipwiser.views.SpCompatButton
            android:id="@+id/buttonGoogle"
            style="@style/GoogleStyle"
            android:layout_width="@dimen/dimen_144dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingLeft="@dimen/dimen_10dp"
            android:text="@string/google"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            />

    </LinearLayout>

    <com.clipwiser.views.TextViewRegular
        style="@style/textStyle_normal"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dimen_9dp"
        android:text="@string/we_donot_post"
        android:textColor="@color/color_8a000000"
        android:textSize="@dimen/dimen_12sp"/>

    <RelativeLayout
        android:id="@+id/relativelayoutLoginSignupCOntainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <com.clipwiser.views.TextViewRegular
        android:id="@+id/tvLoginUsing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:text="@string/or_using_email"
        android:textColor="@color/color_8a000000"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/dimen_14sp"/>

    <LinearLayout
        android:layout_below="@+id/tvLoginUsing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

    <com.clipwiser.views.SpCompatButton
        android:id="@+id/buttonSignIn"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="@dimen/dimen_44dp"
        android:layout_margin="@dimen/dimen_10dp"
        android:background="@drawable/btn_selector"
        android:gravity="center"
        android:text="@string/signin"
        android:textColor="@android:color/white"
        />

        <com.clipwiser.views.SpCompatButton
            android:id="@+id/buttonSignUp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_44dp"
            android:layout_weight="1"
            android:layout_margin="@dimen/dimen_10dp"
            android:background="@drawable/btn_selector"
            android:gravity="center"
            android:text="@string/signup"
            android:textColor="@android:color/white"
            />

    </LinearLayout>
    </RelativeLayout>

</LinearLayout>