<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
    android:id="@+id/linearLayoutRootSignup"
              android:background="@android:color/white"
    >

    <include
        layout="@layout/toolbar_title_back"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/boarder_gray_one_dp"
        android:layout_margin="@dimen/dimen_20dp"
        android:orientation="vertical"
        >

        <android.support.v7.widget.AppCompatEditText
        android:id="@+id/editTextEmailSignup"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_40dp"
        android:hint="@string/email"
        style="@style/edittext_style_norml"
        android:layout_marginTop="@dimen/dimen_5dp"
        android:layout_marginBottom="@dimen/dimen_5dp"
        android:background="@android:color/transparent"
        />
        <View
            android:id="@+id/viewLineEmailSignup"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_1dp"
            android:background="@color/color_D3D3D3"
            />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/editTextPwdSignup"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_40dp"
            android:hint="@string/set_password"
            style="@style/edittext_style_norml"
            android:layout_marginTop="@dimen/dimen_5dp"
            android:layout_marginBottom="@dimen/dimen_5dp"
            android:inputType="textPassword"
            android:background="@android:color/transparent"
            />
        <View
            android:id="@+id/viewLinePwdSignup"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_1dp"
            android:background="@color/color_D3D3D3"
            />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/editTextFullNameSignup"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_40dp"
            android:hint="@string/fullname"
            style="@style/edittext_style_norml"
            android:layout_marginTop="@dimen/dimen_5dp"
            android:layout_marginBottom="@dimen/dimen_5dp"
            android:background="@android:color/transparent"
            />
        <View
            android:id="@+id/viewLineNameSignup"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_1dp"
            android:background="@color/color_D3D3D3"
            />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/editTextMobileSignup"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_40dp"
            android:hint="@string/mobile_no_orderupdates"
            style="@style/edittext_style_norml"
            android:layout_marginTop="@dimen/dimen_5dp"
            android:layout_marginBottom="@dimen/dimen_5dp"
            android:background="@android:color/transparent"
            android:inputType="number"
            />
        <View
            android:id="@+id/viewLineMobileSignup"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_1dp"
            android:background="@color/color_D3D3D3"
            />

            <RadioGroup
                android:id="@+id/radioGroupGender"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_50dp"
                android:layout_marginTop="@dimen/dimen_5dp"
                android:layout_marginBottom="@dimen/dimen_5dp"
                android:layout_marginLeft="@dimen/dimen_10dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                >

                <RadioButton
                    android:id="@+id/radiobuttonFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female"
                    android:theme="@style/MyRadioButton"
                    />

                <RadioButton
                    android:id="@+id/radiobuttonMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male"
                    android:layout_marginLeft="@dimen/dimen_20dp"
                    android:theme="@style/MyRadioButton"
                    />

            </RadioGroup>
        <com.clipwiser.views.SpCompatButton
            android:id="@+id/buttonSignUp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_44dp"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:background="@drawable/btn_selector"
            android:gravity="center"
            android:text="@string/signup"
            android:textColor="@android:color/white"
            />

        <com.clipwiser.views.custom_progressbar.SmoothProgressBar
            android:id="@+id/smoothProgressbarSignup"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginEnd="@dimen/dimen_10dp"
            android:layout_marginLeft="@dimen/dimen_10dp"
            android:layout_marginRight="@dimen/dimen_10dp"
            android:layout_marginStart="@dimen/dimen_10dp"
            android:indeterminate="true"
            android:indeterminateOnly="false"
            android:progressDrawable="@drawable/smooth_progressbar_drawable"
            />
    </LinearLayout>
    </ScrollView>
</LinearLayout>